--- a/style.css
+++ b/style.css
@@ -412,18 +412,11 @@ footer {
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+.blog-post-image {
+  display: block;
+  width: 100%;
+  height: auto; /* Added to maintain aspect ratio */
+}
 .tools-table {
     width: 100%;
     border-collapse: collapse;
